# pylic

./: .gitignore  .pre-commit-hooks.yaml  Dockerfile  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: integration-tests.yml  pypi-publish.yml  python-version-integration-tests.yml  quality.yml  unit-tests.yml
pylic/: __main__.py  license_checker.py  licenses.py  pylic.py  toml.py
pylic/cli/: app.py  console_reader.py  console_writer.py  output.py
pylic/cli/commands/: check.py  command.py  help.py  list.py  version.py
scripts/: create_new_release.sh  publish_new_docker.sh
src/pylic/: __init__.py  __main__.py  config.py  license_checker.py  licenses.py  main.py
src/pylic/cli/commands/: check.py  help.py  list.py  version.py
tests/: conftest.py  license_checker_test.py  licenses_test.py  test_app.py  test_licenses.py  test_pylic.py  test_something.py  toml_test.py
tests/cli/commands/: check_test.py  list_test.py
tests/integration_tests/: full_app_test.py
tests/integration_tests/test_tomls/: bad_unsafe_package.toml  unnecessary_safe_license.toml  unnecessary_unsafe_package.toml  unnecessary_unsafe_package_and_safe_license.toml  valid.toml
tests/test_tomls/: invalid.toml  unknown_license_allowed.toml
tests/unit_tests/: license_checker_test.py  licenses_test.py  toml_test.py
tests/unit_tests/cli/: app_test.py  conftest.py  console_reader_test.py
tests/unit_tests/cli/commands/: check_test.py  list_test.py  version_test.py
tests/unit_tests/test_tomls/: unknown_license_allowed.toml
